<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Bikefriend</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="drawer_map">Map</string>
    <string name="drawer_preferred_stations">Favorite Stations</string>
    <string name="drawer_chronometer">Chronometer</string>
    <string name="drawer_history">History</string>
    <string name="drawer_lost_and_found">Lost &amp; Found</string>
    <string name="drawer_service_information">Service Information</string>
    <string name="drawer_emergency">Emergency</string>

    <string name="menu_refresh">Refresh</string>
    <string name="menu_bicycle">Bicycles</string>
    <string name="menu_parking">Parkings</string>
    <string name="menu_layers">Layers</string>

    <string name="menu_places">Places</string>
    <string name="menu_place_taipei">Taipei</string>
    <string name="menu_place_new_taipei">New Taipei</string>
    <string name="menu_place_taoyuan">Taoyuan</string>
    <string name="menu_place_hsinchu">Hsinchu</string>
    <string name="menu_place_taichung">Taichung</string>
    <string name="menu_place_changhua">Changhua</string>
    <string name="menu_place_kaohsiung">Kaohsiung</string>
    <string name="menu_place_tainan">Tainan</string>
    <string name="menu_place_pingtung">Pingtung</string>
    <string name="menu_place_taiwan">Taiwan</string>

    <string name="menu_settings">Settings</string>

    <string name="message_network_not_available">Network is not available</string>
    <string name="message_server_not_reachable_format">Problem: The server for %s is not reachable</string>
    <string name="message_parse_error_format">Problem: Cannot parse the data from %s\'s server</string>

    <string name="map_popup_station_nb_bike">Bicycles</string>
    <string name="map_popup_station_nb_parking">Parkings</string>
    <string name="map_popup_station_data_age_sec_format">Station data is %d sec(s) old.</string>
    <string name="map_popup_station_data_age_min_format">Station data is %d min(s) old.</string>
    <string name="map_popup_station_data_age_hour_format">Station data is %d hour(s) old.</string>
    <string name="map_popup_station_data_age_day_format">Station data is %d day(s) old.</string>

    <string name="map_popup_layer_stations">Stations</string>
    <string name="map_popup_layer_toilets">Toilets</string>
    <string name="map_popup_layer_drinkable_water">Drinkable Water</string>

    <string name="favorite_list_empty_list_text">To list stations in this view,\nplease mark them as favorite.</string>

    <string name="chronometer_started_at_message_format">Chronometer started at %1$02d:%2$02d:%3$02d</string>
    <string name="chronometer_time_format">%1$02d:%2$02d:%3$02d</string>
    <string name="chronometer_start_button">Start</string>
    <string name="chronometer_stop_button">Stop</string>

    <string name="preference_activity_title">Settings</string>

    <string name="preference_auto_refresh_min_period">Auto-refresh period</string>
    <string-array name="preference_auto_refresh_min_period_value">
        <item>60000</item> <!-- do not translate -->
        <item>120000</item> <!-- do not translate -->
        <item>180000</item> <!-- do not translate -->
        <item>300000</item> <!-- do not translate -->
    </string-array>
    <string-array name="preference_auto_refresh_min_period_display">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>5 minutes</item>
    </string-array>

    <string name="preference_location_language">Location language</string>
    <string-array name="preference_location_language_value">
        <item>DefinedBySystem</item> <!-- do not translate -->
        <item>Chinese</item> <!-- do not translate -->
        <item>English</item> <!-- do not translate -->
        <item>ChineseAndEnglish</item> <!-- do not translate -->
    </string-array>
    <string-array name="preference_location_language_display">
        <item>Defined by the system</item>
        <item>Chinese</item>
        <item>English</item>
        <item>Chinese and english</item>
    </string-array>

    <string name="preference_map_provider">Map Provider</string>
    <string-array name="preference_map_provider_value">
        <item>GoogleMap</item> <!-- do not translate -->
        <item>OpenStreetMap</item> <!-- do not translate -->
    </string-array>
    <string-array name="preference_map_provider_display">
        <item>Proprietary GoogleMap</item>
        <item>Free OpenStreetMap</item>
    </string-array>

</resources>
