<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".com.lemoulinstudio.bikefriend.BikefriendActivity">
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_action_refresh"
        app:showAsAction="ifRoom"
        android:title="@string/menu_refresh"/>
    <item
        android:id="@+id/menu_bicycle"
        android:icon="@drawable/ic_action_bicycle"
        app:showAsAction="ifRoom"
        android:title="@string/menu_bicycle"/>
    <item
        android:id="@+id/menu_parking"
        android:icon="@drawable/ic_action_parking"
        app:showAsAction="ifRoom"
        android:title="@string/menu_parking"/>
    <item
        android:id="@+id/menu_places"
        android:icon="@drawable/ic_action_goto_location"
        app:showAsAction="ifRoom"
        android:title="@string/menu_places">
        <menu>
            <item
                android:id="@+id/menu_place_taipei"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_taipei"/>
            <item
                android:id="@+id/menu_place_taichung"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_taichung"/>
            <item
                android:id="@+id/menu_place_changhua"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_changhua"/>
            <item
                android:id="@+id/menu_place_kaohsiung"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_kaohsiung"/>
            <item
                android:id="@+id/menu_place_tainan"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_tainan"
                android:visible="false"/>
            <item
                android:id="@+id/menu_place_pingtung"
                android:icon="@drawable/ic_action_place"
                app:showAsAction="never"
                android:title="@string/menu_place_pingtung"/>
            <item
                android:id="@+id/menu_place_taiwan"
                android:icon="@drawable/ic_action_taiwan"
                app:showAsAction="never"
                android:title="@string/menu_place_taiwan"/>
        </menu>
    </item>
    <item
        android:id="@+id/menu_layers"
        android:icon="@drawable/ic_action_layer"
        app:showAsAction="ifRoom"
        android:title="@string/menu_layers"
        android:visible="false"/>
</menu>
